--- a/client/app/style.css
+++ b/client/app/style.css
@@ -3,5 +3,26 @@ table {
 }
 
 td, th {
-  border: solid black 1px;
+  border: solid #999 1px;
+}
+
+.course-title {
+  height: 120px;
+  /*text-align: left;*/
+  white-space: nowrap;
+  border: none;
+}
+
+.course-title > div {
+  transform:
+    /* Magic Numbers */
+    translate(27px, 37px)
+      /* 45 is really 360 - 45 */
+    rotate(315deg);
+  width: 40px;
+}
+
+.course-title > div > span {
+  border-bottom: 1px solid #999;
+  padding: 5px 10px;
 }
